crates/lyra-tests/tests/snapshots/corpus__lrm__12__12.5.4__set_membership_case__casez_inside_illegal.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.case_inside_requires_plain_case] 5:4..5:4: `inside` is only allowed with `case`, not `casex` or `casez`
---
unit (0 diagnostics)
